--- a/manual.po
+++ b/manual.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-10-27 18:37+0200\n"
-"PO-Revision-Date: 2010-11-07 00:14+0300\n"
+"PO-Revision-Date: 2010-11-09 01:51+0300\n"
 "Last-Translator: Khaled Hosny <khaledhosny@eglug.org>\n"
 "Language-Team: Arabic <doc@arabeyes.org>\n"
 "Language: ar\n"
@@ -654,9 +654,9 @@ msgstr ""
 "لكن هناك بعض الاختلافات بين ترجمة البرمجيات وباقي أنواع الترجمة، منها "
 "الطبيعة التقنية للنصوص المترجمة لكنها ليست الاختلاف الوحيد، فالأدوات "
 "المستخدمة في الترجمة مختلفة، وهناك بعض القيود على الترجمة. كما خُصص فصل كامل "
-"في هذا الكتاب لمناقشة المسائل التقنية التي تظهر عن توطين البرمجيات (انظر ص "
-"<bf1>28</bf1>). لذا يجب أن يوضع في الاعتبار أن حتى أمهر المترجمين بحاجة إلى "
-"التمرس على المسائل التي تختص بها ترجمة البرمجيات."
+"في هذا الكتاب لمناقشة المسائل التقنية التي تظهر عن توطين البرمجيات (انظر "
+"صفحة <bf1>28</bf1>). لذا يجب أن يوضع في الاعتبار أن حتى أمهر المترجمين بحاجة "
+"إلى التمرس على المسائل التي تختص بها ترجمة البرمجيات."
 
 msgid ""
 "An interesting thing to keep in mind is that a translated document is "
@@ -718,7 +718,7 @@ msgstr ""
 "وبالنسبة للأدوات يُفضل طبعا استخدام أدوات حرة لتوطين البرمجيات الحرة. نسق "
 "الملفات PO هو الأكثر شيوعا، ولأنه يحتوى على النص الأصلي بالإضافة إلى الترجمة "
 "(مثله مثل XLIFF) فالاهتمام أقل بإعادة الترجمة وتبادل ذواكر الترجمة. قسم "
-"“<bf0>عملية توطين بسيطة</bf0>” ص <bf1>44</bf1> يتناول مثالا على سير عملية "
+"“<bf0>عملية توطين بسيطة</bf0>” صفحة <bf1>44</bf1> يتناول مثالا على سير عملية "
 "التوطين."
 
 msgid "Orientation"
@@ -804,7 +804,7 @@ msgstr ""
 "تحتم التخطيط لوسائل استدامة واستمرارية المشروع. فإذا أتيح المال سيكون عليك "
 "وضع ميزانية وملاحظة مدى الالتزام بها، وعليك أيضا حساب الوقت المستغرق لإنجاز "
 "العمل لتستطيع تنظيم الوقت أفضل. قسم “<bf0>الأولويات (عندما لا تستطيع عمل كل "
-"شيء)</bf0>” ص <bf1>52</bf1> يناقش بعضا من وسائل تقييم المشاريع وتحديد "
+"شيء)</bf0>” صفحة <bf1>52</bf1> يناقش بعضا من وسائل تقييم المشاريع وتحديد "
 "أولوياتها."
 
 msgid ""
@@ -1164,9 +1164,9 @@ msgid ""
 msgstr ""
 "لا تحتاج للاختيار بين هاتين الأداتين إذ تكمل إحداهما الأخرى، فالمشاريع "
 "المستضافة على بوتل يمكن ترجمتها دون إنترنت باستخدام فرتال ثم رفع الملفات "
-"المترجمة إلى بوتل. قسم “<bf0>أدوات التوطين</bf0>” ص <bf1>39</bf1> يشرح هاتين "
-"الأداتين بتفصيل أكثر. الكثير من أقسام هذا الكتاب تتحدث عن خصائص معينة في "
-"هاتين الأداتين لذا من المحبذ تثبيت فرتال وتسجيل حساب في أحد خواديم بوتل "
+"المترجمة إلى بوتل. قسم “<bf0>أدوات التوطين</bf0>” صفحة <bf1>39</bf1> يشرح "
+"هاتين الأداتين بتفصيل أكثر. الكثير من أقسام هذا الكتاب تتحدث عن خصائص معينة "
+"في هاتين الأداتين لذا من المحبذ تثبيت فرتال وتسجيل حساب في أحد خواديم بوتل "
 "ليمكنك اتباع التعليمات الواردة في الكتاب. سيقدم فرتال العون الأكبر أثناء "
 "الترجمة عبر تلوين الأجزاء المهمة لإبرازها، والتكامل مع الكثير من الخدمات "
 "المساعدة إذا كنت متصلا بالإنترنت."
@@ -1619,7 +1619,7 @@ msgstr ""
 "استفهام (?) أو علامة تعجب (!) أو ثلاث نقاط (…). لاحظ أن الثلاثة نقاط قد تكتب "
 "ثلاثة نقاط متتابعة أو حرف واحد يمثلها جميعا وقد يصعب كتابته. يسهل فِرتال من "
 "إدراج الحروف الخاصة كهذه بتمييزها على أنها مُدرج (المُدرجات مفهوم خاص في "
-"فرتال، تعرف عليه أكثر في ص <bf0>40</bf0>)."
+"فرتال، تعرف عليه أكثر في صفحة <bf0>40</bf0>)."
 
 msgid ""
 "If your language uses different punctuation from English, it might be good "
@@ -1662,7 +1662,7 @@ msgid ""
 msgstr ""
 "إذا كانت لغتك تكتب بحروف غير اللاتينية فمن المهم وضع معايير لكتابة الأعلام "
 "الأجنبية ومتى تنقل صوتيا ومتى تكتب بحروفها الأصلية، والاتفاق على قواعد النقل "
-"الصوتي. يناقش هذا الأمر بتفصيل أكثر ص <bf0>23</bf0>."
+"الصوتي. يناقش هذا الأمر بتفصيل أكثر صفحة <bf0>23</bf0>."
 
 msgid ""
 "There are often more than one way to say the same thing. You can be formal, "
@@ -1762,7 +1762,7 @@ msgid ""
 msgstr ""
 "من المهم جدا في الترجمة إيصال المعنى المراد في النص الأصلي. فأحيانا تجد أن "
 "بإمكانك صوغ الترجمة بطريقة أفضل، لكن عليك التأكد من أنك لا تغير المعنى "
-"المراد. راجع النقاط في قسم “مبادئ أساسية” ص <bf1>21</bf1> ففيها أمثلة على "
+"المراد. راجع النقاط في قسم “مبادئ أساسية” صفحة <bf1>21</bf1> ففيها أمثلة على "
 "هذا. فعلى سبيل المثال يجب ألا تكون الترجمة معممة أكثر أو مخصصة أكثر من النص "
 "الأصلي. كما أن النص قد يستخدم في سياق لا تتوقعه، فإذا اختلفت الترجمة كثيرا "
 "عن الأصل قد لا تلائم الاستخدامات التي لم تفكر فيها."
@@ -1997,10 +1997,10 @@ msgstr ""
 "تختار مصطلحات موجودة فعلا في الترجمات التي تعمل عليها بدلا من العمل على "
 "مصطلحات قد تكون مفيدة لكنك لا تحتاجها في الوقت الحالي. من الحلول المناسبة "
 "لهذه المهمة استخدام أداة استخراج مصطلحات مثل <f0>poterminology</f0> من عُدّة "
-"الترجمة (انظر ص <bf1>12</bf1>)، كما يحتوي بوتل على نفس الخاصية (انظر ص "
-"<bf2>42</bf2>). تعمل هذه الأدوات على تحليل النص لاستخراج قائمة المصطلحات "
-"المتكررة منه، قد لا تكون كل المصطلحات في القائمة الناتجة مهمة أو ذات معنى "
-"لكن يمكنك اعتبار هذه القائمة نقطة بداية توفر عليك الوقت."
+"الترجمة (انظر صفحة <bf1>12</bf1>)، كما يحتوي بوتل على نفس الخاصية (انظر "
+"صفحة <bf2>42</bf2>). تعمل هذه الأدوات على تحليل النص لاستخراج قائمة "
+"المصطلحات المتكررة منه، قد لا تكون كل المصطلحات في القائمة الناتجة مهمة أو "
+"ذات معنى لكن يمكنك اعتبار هذه القائمة نقطة بداية توفر عليك الوقت."
 
 msgid ""
 "One disadvantage of a terminology extraction program, is that it probably "
@@ -2105,7 +2105,7 @@ msgid "http://www.wikipedia.org/"
 msgstr "http://www.wikipedia.org/"
 
 msgid "Technical correctness"
-msgstr ""
+msgstr "الدقة"
 
 msgid ""
 "Terms must convey the correct meaning. Watch out for a translation that is "
@@ -2118,6 +2118,11 @@ msgid ""
 "how the terms “file”, “directory”, and “document” are different and how to "
 "properly translate these terms."
 msgstr ""
+"يجب أن يعبر المصطلح عن المعنى الصحيح، فلا يحمل معنى أعم من المصطلح الأصلي أو "
+"معنى أخص يعبر عن جزء منه فقط. وعليك أن تضع في اعتبارك تعدد المصطلحات "
+"المتقاربة التي تحتاج لتمييزها عن بعضها وإلا قد ينتهي بك الأمر إلى ترجمتها "
+"جميعا بنفس الكلمة. مثلا مصطلحات مثل “photo” و “image” و “picture” قد تحتاج "
+"للتمييز بينها في الترجمة، أو التفرقة بين “file” و “directory” و “document”."
 
 msgid ""
 "On the other hand, the source text might unnecessarily have two terms for "
@@ -2125,6 +2130,9 @@ msgid ""
 "might want to translate them with the same term. Only do this if you are "
 "sure it is safe to do."
 msgstr ""
+"لكن أحيانا ما يستخدم النص الأصلي مصطلحات مختلفة للدلالة على معنى واحد، فإذا "
+"كنت متأكدا من عدم اختلاف المعنى فيمكنك استخدام ترجمة واحدة للدلالة على هذا "
+"المعنى. لكن عليك التأكد أن هذا التوحيد لا يسبب أي مشاكل."
 
 msgid ""
 "On the other hand, a term might have more than one meaning. Ensure that you "
@@ -2133,6 +2141,12 @@ msgid ""
 "verb (the action of putting things in a list). Ensure that you translate the "
 "correct meaning, or that you add both forms to your terminology list."
 msgstr ""
+"أحيانا أخرى يكون لنفس المصطلح معان عدة، وعليك التأكد أن الترجمة تحمل المعنى "
+"المقصود، فإذا م تكن للمصطلح ترجمة واحدة تحمل كل معانيه فعليك وضع ترجمة "
+"مختلفة لكل معنى واستخدام الترجمة الصحيحة حسب السياق. بعض الكلمات الإنجليزية "
+"يمكن أن تكون اسما أو فعلا، مثل كلمة “list” قد تكون اسما (قائمة أو مجموعة من "
+"الأشياء) أو فعلا (سرد الأشياء على شكل قائمة)، وعليك الانتباه إلى المعنى "
+"المقصود."
 
 msgid ""
 "Always ensure that you really understand the source concept correctly. Use "
@@ -2142,9 +2156,14 @@ msgid ""
 "an unintended meaning associated with the term. <f1>Ensure the correct "
 "spelling and orthography of your term.</f1>"
 msgstr ""
+"عليك دائما أن تتأكد من فهم المعنى العام للنص الأصلي، باستخدام القواميس "
+"ومطالعة الموضوع المعني في الوب حتى تفهم معنى المصطلح وما يرمي إليه. عليك "
+"أيضا أن تتأكد أن الترجمة التي تستخدمها توصل المعنى الذي تريده وأنك تستخدمها "
+"في سياقها الصحيح فقد تكون لها دلالات أخرى لا تقصدها. تأكد أيضا من خلو ترجمة "
+"المصطلح من الأخطاء الإملائية."
 
 msgid "Concept recognisability"
-msgstr ""
+msgstr "الوضوح"
 
 msgid ""
 "Remember that you want ordinary users to understand the terms that you use. "
@@ -2153,15 +2172,21 @@ msgid ""
 "and that users get used to all sorts of terms that might have been strange a "
 "few years ago (also in English)."
 msgstr ""
+"لا تنس أنك تريد أن يفهم الناس العاديون المصطلحات التي تستخدمها. أحيانا يبدو "
+"مستحيلا وضع ترجمة لمصطلح تقني يفهمها عامة الناس، لكن الناس تعتاد المصطلحات "
+"الجديدة مع الوقت وكثير من الكلمات المعتادة الآن كان غريبة قبل بضع سنوات (حتى "
+"في الإنجليزية)."
 
 msgid ""
 "Existing terms from engineering, mathematics or office administration might "
 "help you to create a term that is much more recognisable than something "
 "entirely new."
 msgstr ""
+"يمكنك الاستعانة بالمصطلحات المقابلة المستخدمة في مجالات الهندسة والرياضيات "
+"والأعمال المكتبية، فقد تكون أقرب للفهم بلا من صوغ مصطلحات لم تستخدم من قبل."
 
 msgid "Back-translatability"
-msgstr ""
+msgstr "رد المصطلح إلى أصله"
 
 msgid ""
 "Ideally you want to use terms that users will be able to “translate back” to "
@@ -2170,7 +2195,12 @@ msgid ""
 "translate terms back, is that users can guess more easily for which terms to "
 "look for on the web or in untranslated product documentation."
 msgstr ""
+"أحيانا يكون من المفيد أن تكون ترجمة المصطلح واضحة كفاية بحيث يستطيع المستخدم "
+"استنباط المصطلح الأصلي منها، خاصة عندما يكون المستخدمين معتادين على "
+"المصطلحات الإنجليزية، أو عندما يحتاج المستخدم للمصطلح الأصلي ليبحث عنه في "
+"الوب أو في وثائق البرنامج غير المترجمة."
 
+#, fuzzy
 msgid ""
 "For example: in cases where two terms are closely associated in English, "
 "such as “log in/log out” or “enable/disable” it is useful if your translated "
@@ -2179,6 +2209,8 @@ msgid ""
 "positive action (such as “enable”) with a positive action, and a negative "
 "action (such as “disable”) with a negative action."
 msgstr ""
+"مثلا: في حالات كون مصطلحين مرتبطين ببعضها في الإنجليزية مثل “log in/log out” "
+"أو “enable/disable” فمن المفيد إمكانية رد الترجمة إلى مصطلحين مرتبطين."
 
 msgid ""
 "As a localiser you will often see acronyms, abbreviations and brand names in "
@@ -2188,6 +2220,10 @@ msgid ""
 "“<f4>Firefox</f4>”, “<f5>OpenType</f5>”, “<f6>Google</f6>”, "
 "“<f7>Windows</f7>” and “<f8>iPhone</f8>”."
 msgstr ""
+"كثيرا ما تمر عليك أثناء الترجمة الاختصارات مثل “<f0>e.g.</f0>” و "
+"“<f1>i.e.</f1>” و “<f2>SQL</f2>” و “<f3>FTP</f3>”، وأسماء المنتجات مثل "
+"“<f4>Firefox</f4>” و “<f5>OpenType</f5>” و “<f6>Google</f6>” و "
+"“<f7>Windows</f7>” و “<f8>iPhone</f8>”."
 
 msgid ""
 "Since some of these don’t form part of normal conversational language, it "
@@ -2195,6 +2231,9 @@ msgid ""
 "in the source text. This will often be the correct decision, but let us be "
 "aware of a few of the issues."
 msgstr ""
+"بعض هذه المصطلحات ليست جزءا من اللغة المحكية ولذا قد يبدو الحل الوحيد لها "
+"تركها كما هي، أحيانا يكون هذا فعلا أفضل اختيار، لكن علينا الانتباه لبضعة "
+"أمور."
 
 msgid ""
 "Your language might have established translations for abbreviations like "
@@ -2207,6 +2246,13 @@ msgid ""
 "translated name for reference, but in software you will probably not have "
 "enough space to do that."
 msgstr ""
+"قد يكون لبعض الاختصارات ترجمات متعارف عليها في لغة، مثل “etc.”. لكن بعض "
+"اللغات لا تعرف الاختصارات المكتوبة وسيكون عليك في هذه الحالة ترجمة المصطلح "
+"غير المختصر، لكن إن كان الاختصار اسما لتقنية ما (مثل “<f0>XML</f0>”) فمن "
+"الأفضل تركه كما هو إذ قد لا يعرفه الجمهور المستهدف إلا بهذا الاسم المختصر، "
+"لكن في ترجمة المستندات (مثل ملفات المساعدة أو صفحات الوب) حيث لا قيود على "
+"طول النص (على عكس الحال في واجهات البرامج) يمكنك إضافة ترجمة المصطلح لمزيد "
+"من التوضيح."
 
 msgid ""
 "Some companies and products might have local names in your language, and it "
@@ -2215,6 +2261,10 @@ msgid ""
 "sometimes made for languages that don’t use the Latin script, such as "
 "Japanese and Arabic. It is always best to ask in this case."
 msgstr ""
+"قد يكون لبعض الشركات والمنتجات أسماء بلغتك تستخدمها محليا، وأحيانا يكون من "
+"الأنسب استخدامها. في المقابل بعض الأسماء علامات تجارية مسجلة وليس مسموحا لك "
+"بتغييرها. لكن أحيانا يكون هناك استثناءات خاصة للغات التي لا تكتب بالحروف "
+"اللاتينية مثل العربية واليابانية، وفي هذه الحالة من الأفضل السؤال للتأكد."
 
 msgid ""
 "Some product names are plain words, and you might even be encouraged to "
@@ -2224,30 +2274,41 @@ msgid ""
 "referred to by general words – not names associated with the specific "
 "application."
 msgstr ""
+"بعض أسماء المنتجات كلمات عادية وقد يكون هناك تشجيع على ترجمتها، لذا إذا كان "
+"الغرض من الاسم أن يكون مفهوما ويعبر عن وظيفة البرنامج فمن الأفضل ترجمته. "
+"وأيضا بعض الأدوات مثل برنامج الحاسبة ومحرر النصوص يشار إليها أحيانا بكلمات "
+"عامة وليس أسماء معينة."
 
 msgid ""
 "Always take care to follow the capitalisation of the original product name. "
 "Using capitalisation in unusual places (or not at all) might be part of the "
 "brand identity of the company or product."
 msgstr ""
+"إذا كنت ستنقل الاسم كما هو بالحروف اللاتينية فعليك الانتباه إلى استخدام "
+"الحروف الكبيرة والصغيرة، فبعض الأسماء قد تستخدم ترتيبا غير معتاد يشكل جزءا "
+"من العلامة التجارية."
 
 msgid "Transliteration"
-msgstr ""
+msgstr "النقحرة"
 
 msgid ""
 "If your language doesn’t use the Latin script (like Chinese or Arabic), a "
 "policy on transliteration will be useful. Here are some guidelines that "
 "might help your team:"
 msgstr ""
+"إذا كانت لغتك لا تستخدم الحروف اللاتينية (مثل العربية أو الصينية) فمن المهم "
+"وضع سياسة للنقحرة. هذه بعض المعايير التي يمكن الاستعانة بها:"
 
 msgid ""
 "If the name is a word explaining what it does, simply translate the name."
-msgstr ""
+msgstr "إذا كان الاسم كلمة عادية توضح وظيفته فالأفضل ترجمته."
 
 msgid ""
 "If the name is obscure or very technical in nature, you can consider using "
 "it without transliteration if it doesn’t occur very often."
 msgstr ""
+"إذا كان الاسم لمنتج غير شائع أو مصطلح تقني جدا قليل التكرار فقد يكون من "
+"الأفضل تركه بالحروف اللاتينية كما هو ما دام لا يكثر وروده في الترجمة."
 
 msgid ""
 "If the name has no obvious meaning, transliterate the pronunciation of the "
@@ -2255,6 +2316,10 @@ msgid ""
 "transcribe each letter with an equivalent letter in your script, possibly "
 "separating them with dots or spaces if it might be confused with a word."
 msgstr ""
+"إذا لم يكن للاسم أي معنى واضح فالأفضل نقل حروفه صوتيا حسب النقط، لكن إن كان "
+"اختصارا ومنطوقه كلمة طويلة (مثل HTML) فقد يكون من الأفضل استبدال كل حرف "
+"لاتيني بأقرب حرف له في لغتك، إما متصلين أو منفصلين بنقط أو مسافات إذا كان "
+"اتصاله سيجعله غير واضح لتشابه مع كلمة في لغتك."
 
 msgid ""
 "A good dictionary can be very useful for your work. However, it can be "
@@ -2262,6 +2327,9 @@ msgid ""
 "when it is important to check in a dictionary and could make incorrect "
 "assumptions."
 msgstr ""
+"رغم أن وجود قاموس جيد يفيدك جدا أثناء الترجمة، إلا أن كثرة الحاجة إلى النظر "
+"في القاموس أثناء الترجمة قد تكون مرهقة، وفي بعض الأحيان قد لا ينتبه المترجم "
+"إلى أن للكلمة معنى خاص يحتاج أن يراجعه في القاموس."
 
 msgid ""
 "If a translation tool provides terminology assistance, it can be a great "
@@ -2270,11 +2338,17 @@ msgid ""
 "should also make it easy to insert a term without typing, which can save "
 "time and avoid typing errors."
 msgstr ""
+"إذا كانت أداة الترجمة تدعم استخدام مسارد المصطلحات فسيساعد هذا المترجم على "
+"النظر في مسرد المصطلحات كما قد ينبهه إلى المصطلحات التي قد يغفل عن أهميتها. "
+"كما قد يساعد أيضا على إدراج ترجمة المصطلح دون الحاجة لكتابتها وهذا قد يوفر "
+"الوقت ويتفادى الأخطاء الإملائية."
 
 msgid ""
 "Pootle can host a terminology project on the server with project specific "
 "terminology lists. For more information see page <bf0>42</bf0>."
 msgstr ""
+"يمكن لبوتل استضافة مشروع مصطلحات على الخادوم بالإضافة إلى مسارد مصطلحات خاصة "
+"بكل مشروع. طالع صفحة <bf0>42</bf0> لمزيد من التفاصيل."
 
 msgid ""
 "Virtaal can provide terminology suggestions from multiple sources, including "
@@ -2282,6 +2356,9 @@ msgid ""
 "also provides easy access to look up phrases on websites. For more "
 "information see page <bf0>40</bf0> and the Virtaal preferences."
 msgstr ""
+"يوفر فِرتال دعما لإظهار مقترحات للمصطلحات من أكثر من مصدر  سواء ملفات "
+"مصطلحات من على حاسوبك أو خدمات خاصة عبر الإنترنت. انظر صفحة <bf0>40</bf0> "
+"لمزيد من المعلومات."
 
 msgid "Reuse"
 msgstr ""
