--- a/manual.po
+++ b/manual.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-10-27 18:37+0200\n"
-"PO-Revision-Date: 2010-11-11 00:59+0300\n"
+"PO-Revision-Date: 2010-11-12 23:55+0300\n"
 "Last-Translator: Khaled Hosny <khaledhosny@eglug.org>\n"
 "Language-Team: Arabic <doc@arabeyes.org>\n"
 "Language: ar\n"
@@ -3185,7 +3185,7 @@ msgid ""
 msgstr ""
 "تصاغ أغلب الجموع في اللغة الإنجليزية بإلحاق الحرف <f1><f2>s</f2></f1> بآخر "
 "الكلمة، وستجد كثيرا من المبرمجين يضيفون <f4><f5>(s)</f5></f4> إلى الكلمة "
-"للدلالة إلى أنها قد تكون مفردا أو جمعا. في اللغة العربية (على سبيل المثال) "
+"للدلالة إلى أنها قد تكون مفردا أو جمعا. في اللغة العربية --على سبيل المثال-- "
 "يصاغ الجمع بتغيير وزن الكلمة وقد تضاف الحروف أو تحذف من أي موضع من الكلمة."
 
 msgid "Show/Hide Axis Description<f0>(s)</f0>"
@@ -3326,9 +3326,14 @@ msgid ""
 "percentage sign in the translated program. This is similar to escaping that "
 "was discussed on page <bf0>29</bf0>."
 msgstr ""
+"أحيانا تعطي المتغيرات معان خاصة لبعض العلامات وإذا أردت استخدام هذه العلامات "
+"في الترجمة فستحتاج لكتابتها على صورة معينة. في بعض الأمثلة أعلاه استُخدمت "
+"علامة النسبة المئوية (%) لبدأ المتغيرات، وهي جزء من المتغير لذا لن تظهر عند "
+"تشغيل البرنامج، وإذا احتجت إلى النسبة المئوية في الترجمة فستحتاج إلى كتابة “"
+"%%” لتظهر علامة نسبة مئوية واحدة أثناء تشغيل البرنامج."
 
 msgid "The download is %d<f0>%%</f0> complete."
-msgstr ""
+msgstr "The download is %d<f0>%%</f0> complete."
 
 msgid ""
 "This message will display something like “The download is 40% complete” or "
@@ -3338,20 +3343,27 @@ msgid ""
 "and that the “%%” represents the single percentage sign in the translated "
 "software."
 msgstr ""
+"ستعطي هذه الرسالة نصا مثل “The download is 40% complete” أو “The download is "
+"100% complete”. عليك أن تنتبه إلى أن “%d” متغير لقيمة عددية (مثل 40 أو 100 "
+"في المثال السابق) بينما تمثل “%%” علامة نسبة مئوية واحدة في الترجمة."
 
 msgid ""
 "If you are unsure how to deal with these cases, don’t worry: they are rare "
 "and a programmer for the project should be able help you."
 msgstr ""
+"لا تقلق إذا لم تعرف كيف تتعامل مع هذه الحالات فهي نادرة وتستطيع سؤال مطوري "
+"المشروع المساعدة حينها."
 
 msgid "There are three important things to keep in mind here:"
-msgstr ""
+msgstr "بعض الأمور التي ينبغي الانتباه إليها:"
 
 msgid ""
 "The variable itself should not be translated or changed in any way, unless "
 "you really know what you are doing. Make sure that you know which characters "
 "are part of the variable that needs to be kept in your translation."
 msgstr ""
+"يجب عدم ترجمة المتغير نفسه أو تعديله بأي شكل إلا إن كنت متأكدا مما تفعله. "
+"عليك تمييز المتغير من باقي النص الذي سيترجم."
 
 msgid ""
 "It is your responsibility to move the variable in your translation to the "
@@ -3360,6 +3372,9 @@ msgid ""
 "translation with reference to what will eventually replace the placeholder. "
 "Don’t follow the word order of the original sentence blindly."
 msgstr ""
+"عليك وضع المتغير في الموضع المناسب له في الترجمة لتظهر الرسالة المترجمة "
+"طبيعية حسب قواعد اللغة، وقد تحتاج لضبط نص الترجمة ليناسب الشيء الذي يمثله "
+"المتغير، ولا تتبع ترتيب الكلمات في النص الأصلي حرفيا."
 
 msgid ""
 "When there is more than one variable in the string, you might need to "
@@ -3367,6 +3382,9 @@ msgid ""
 "freely, whereas symbolic variables (like “%d” or “%s”) might need to be "
 "handled with more care, or might not allow reordering."
 msgstr ""
+"إذا تعددت المتغيرات فقد تحتاج لتغيير ترتيبها. المتغيرات ذات الأسماء يمكن "
+"ترتيبها بحرية، لكن المتغيرات الرمزية (مثل “%d” أو “%s”) تحتاج لمعاملة خاصة "
+"وأحيانا لا يمكن تغيير ترتيبها عن الأصل."
 
 msgid ""
 "Since variables might contain things unusual to your language, such as file "
@@ -3374,42 +3392,50 @@ msgid ""
 "quotation marks if this is a good way to indicate the unusual text in your "
 "language."
 msgstr ""
+"أحيانا ما تشير المتغيرات إلى أشياء غير معتادة مثل بعض رسائل الأعطال غير "
+"المترجمة أو أسماء الملفات، لذا قد ترغب في إحاطتها بعلامتي تنصيص إذا كانت هذه "
+"طريقة مناسبة لتمييز النصوص غير المعتادة في لغتك."
 
 msgid ""
 "There are many smaller issues related to variables. Read more in the section "
 "on “<bf0>Advanced handling of variables</bf0>” on page <bf1>37</bf1>, and "
 "also this article:"
 msgstr ""
+"هناك الكثير من الأمور الصغيرة الأخرى متعلقة بالمتغيرات، طالع قسم "
+"“<bf0>التعامل المتقدم مع المتغيرات</bf0>” صفحة <bf1>37</bf1>، وهذه المقالة "
+"أيضا:"
 
 msgid "http://translate.sourceforge.net/wiki/guide/translation/variables"
-msgstr ""
+msgstr "http://translate.sourceforge.net/wiki/guide/translation/variables"
 
 msgid ""
 "Programs do have the ability to handle plurals correctly. When the "
 "application runs it will determine which plural form to use based on the "
 "number that is being displayed. So in English it would display:"
 msgstr ""
+"للبرامج القدرة على التعامل الصحيح مع صيغ الجمع. يحدد البرنامج أثناء تشغيله "
+"أي صيغ الجمع يستخدم بناء على الرقم الذي سيعرضه. فمثلا سيعرض بالإنجليزية:"
 
 msgid "0 files"
-msgstr ""
+msgstr "0 files"
 
 msgid "1 file"
-msgstr ""
+msgstr "1 file"
 
 msgid "2 files"
-msgstr ""
+msgstr "2 files"
 
 msgid "3 files"
-msgstr ""
+msgstr "3 files"
 
 msgid "100 files"
-msgstr ""
+msgstr "100 files"
 
 msgid "109 files"
-msgstr ""
+msgstr "109 files"
 
 msgid "etc."
-msgstr ""
+msgstr "إلخ."
 
 msgid ""
 "Here you see that the text is different depending on the number of items. "
@@ -3419,17 +3445,22 @@ msgid ""
 "singular case (“1 file”) and one for the plural case (“files” – all numbers "
 "except 1)."
 msgstr ""
+"فكما ترى تغير النص طبقا لعدد العناصر. في أغلب اللغات يختلف تمييز العدد طبقا "
+"لقيمته وعليك أن تعرف القاعدة المطبقة في لغتك بدقة. في حالة الإنجليزية، هناك "
+"حالتين؛ حالة للمفرد (“1 file”) وأخرى للجمع (“files”، أي رقم عدا 1)."
 
 msgid "<f0>%d file was</f0> added to the archive."
-msgstr ""
+msgstr "<f0>%d file was</f0> added to the archive."
 
 msgid "<f0>%d files were</f0> added to the archive."
-msgstr ""
+msgstr "<f0>%d files were</f0> added to the archive."
 
 msgid ""
 "Notice how the noun is different, and the grammar adapts to agree with the "
 "noun (“was” / “were”)."
 msgstr ""
+"لاحظ الاختلاف في تمييز العدد بين الحالتين وفي تركيب الجملة أيضا (“was” و "
+"“were”)."
 
 msgid ""
 "If your language does not have plurals, you will simply translate the two "
@@ -3441,6 +3472,11 @@ msgid ""
 "a correct message to be displayed to the user depending on the number of "
 "things mentioned."
 msgstr ""
+"اللغات التي لا تستخدم صيغة للجمع ستترجم الجملتين بجملة واحدة، وهذا شائع في "
+"بعض اللغات الآسيوية. اللغات التي تستخدم قاعدة مطابقة للإنجليزية ستترجم كل "
+"جملة بجملة مقابلة لها (واحدة للمفرد وواحدة للجمع). اللغات التي تستخدم أكثر "
+"من حالتين سيترجم النص إلى جملة لكل حالة حسب الرقم المستخدم طبقا للقواعد "
+"اللغوية."
 
 msgid ""
 "Since an unknown number of things are involved, proper plural messages "
@@ -3449,15 +3485,20 @@ msgid ""
 "placeholder stands for, and consider reordering things in the sentence to "
 "correctly reflect your language."
 msgstr ""
+"دائما ما تحتوي صيغ الجموع السليمة على متغيرات (انظر صفحة <bf0>32</bf0>) لأن "
+"العدد غير معلوم، ففي المثال السابق يمثل المتغير “%d” عددا مجهولا. انتبه "
+"دائما لما يمثله المتغير ولا تنس ترتيب الجملة لتكون الترجمة طبيعية."
 
 msgid ""
 "On rare occasions programmers might ask you for more information about how "
 "plural forms work in your language. The following page probably contains "
 "what is needed:"
 msgstr ""
+"قد يطلب منك المبرمجون --في حالات قليلة-- معلومات إضافية عن قواعد التعامل مع "
+"صيغ الجمع في لغتك. قد تجد المعلومات المطلوبة في هذه الصفحة:"
 
 msgid "http://translate.sourceforge.net/wiki/l10n/pluralforms"
-msgstr ""
+msgstr "http://translate.sourceforge.net/wiki/l10n/pluralforms"
 
 msgid ""
 "<f0>An </f0><f1><f2>accelerator key</f2></f1><f3> is a key on your keyboard "
@@ -3471,89 +3512,98 @@ msgid ""
 "notice that most of the menu entries also have accelerator keys, to access "
 "<f19><f20>O</f20></f19>pen simply type <f21>o</f21> after typing Alt+F."
 msgstr ""
+"<f2>المسرع</f2> (\"accelerator\" ويسمى أحيانا \"hot key\" أو \"access key\" أو "
+"\"mnemonic\") هو زر في لوحة المفاتيح تضغط عليه للوصول إلى نافذة أو تشغيل أمر "
+"ما بسرعة. إذا نظرت إلى شريط القوائم في أي تطبيق فستجد خطا تحت بعض الحروف في "
+"أسماء القوائم. لاحظ الخط تحت الحرف الأول في <f13><f14>F</f14></f13>ile و "
+"<f15><f16>E</f16></f15>dit و <f17><f18>V</f18></f17>iew. لفتح قائمة ملف تضغط "
+"Alt+F. ستلاحظ أيضا أن أغلب عناصر القائمة بها مسرعات، فللوصول إلى "
+"<f19><f20>O</f20></f19>pen تضغط على <f21>o</f21> بعد الضغط على Alt+F."
 
 msgid ""
 "An <f0>accelerator marker</f0> is the special character we use to mark "
 "accelerator keys when we translate."
-msgstr ""
+msgstr "<f0>علامة المسرعات</f0> هي رمز خاص نستخدمه لتحدد زر المسرع في الترجمة."
 
 msgid "Identifying the accelerator"
-msgstr ""
+msgstr "التعرف على المسرع"
 
 msgid ""
 "In translations accelerator keys are shown by various marker characters:"
-msgstr ""
+msgstr "تتعدد علامات المسرعات وتختلف من برنامج لآخر:"
 
 msgid "Application"
-msgstr ""
+msgstr "البرنامج"
 
 msgid "Marker"
-msgstr ""
+msgstr "العلامة"
 
 msgid "Name"
-msgstr ""
+msgstr "الاسم"
 
 msgid "English Text"
-msgstr ""
+msgstr "النص الإنجليزي"
 
 msgid "Displays As"
-msgstr ""
+msgstr "كيف يظهر"
 
 msgid "Note"
-msgstr ""
+msgstr "ملاحظات"
 
 msgid "KDE, QT and wxWidgets"
-msgstr ""
+msgstr "كدي و Qt و wxWidgets"
 
 msgid "&"
-msgstr ""
+msgstr "&"
 
 msgid "ampersand"
 msgstr ""
 
 msgid "Save <f0>&</f0>As…"
-msgstr ""
+msgstr "Save <f0>&</f0>As…"
 
 msgid "Save <f0><f1>A</f1></f0>s…"
-msgstr ""
+msgstr "Save <f0><f1>A</f1></f0>s…"
 
 msgid "GNOME and GTK"
-msgstr ""
+msgstr "جنوم و GTK"
 
 msgid "_"
-msgstr ""
+msgstr "_"
 
 msgid "underscore"
 msgstr ""
 
 msgid "Save <f0>_</f0>As…"
-msgstr ""
+msgstr "Save <f0>_</f0>As…"
 
 msgid "OpenOffice.org"
-msgstr ""
+msgstr "أوبن أوفيس"
 
 msgid "~"
-msgstr ""
+msgstr "~"
 
 msgid "tilde"
 msgstr ""
 
 msgid "Save <f0>~</f0>As…"
-msgstr ""
+msgstr "Save <f0>~</f0>As…"
 
 msgid "If using <a0>moz2po</a0>"
-msgstr ""
+msgstr "عند استخدام <a0>moz2po</a0>"
 
 msgid "Windows <a0>.rc</a0>"
-msgstr ""
+msgstr "ملفات <a0>.rc</a0> في وندوز"
 
 msgid "Also used in Wine"
-msgstr ""
+msgstr "تستخدم أيضا في واين"
 
 msgid ""
 "In all of the above examples pressing <f0>A</f0> would take you to the "
 "<f1>Save As</f1> dialogue box."
 msgstr ""
+"الضغط على <f0>A</f0> في أي من الأمثلة السابقة سيفتح مربع <f1>Save As</f1> "
+"الحواري."
 
 msgid ""
 "What happens if you want to use the & character without making it an "
@@ -3562,22 +3612,26 @@ msgid ""
 "translator you would be free to drop the & and use the equivalent of the "
 "word “and” in your language."
 msgstr ""
+"ماذا لو أردنا استخدام الرمز & دون أن يكون علامة على مسرع؟ في هذه الحالة "
+"سيكتب بطريقة خاصة؛ && (في كدي) أو ‪&amp;‬ (في موزيلا): “Mail && News” أو "
+"“Mail &amp; News”. طبعا يمكنك تجاهل & في هذه الحالة واستخدام الكلمة التي "
+"تقابلها في لغتك."
 
 msgid "Selecting"
-msgstr ""
+msgstr "اختيار المسرع"
 
 msgid ""
 "How do you select an accelerator key for your languages? Keep these "
 "principles in mind:"
-msgstr ""
+msgstr "بعض القواعد التي قد تفيدك في اختيار المسرع المناسب:"
 
 msgid ""
 "Try to keep it similar to the English. This makes it easier for users to "
 "switch to localised interfaces."
-msgstr ""
+msgstr "استخدم الحرف الأبرز، مثل فاء مصدر الكلمة، والكلمة الأبرز في الجملة."
 
 msgid "Accelerators should not degrade readability too much."
-msgstr ""
+msgstr "تفادى الحروف التي سيؤثر وجود شرطة المسرع تحتها على وضوحها."
 
 msgid ""
 "Avoid duplication. Ideally, in any menu, window or dialogue box, a letter "
@@ -3585,28 +3639,33 @@ msgid ""
 "used for two menu entries, it is usually not a big problem, but the software "
 "isn't as usable as it could be."
 msgstr ""
+"تفادى تكرار المسرعات. لا يفترض أن يستخدم نفس الحرف أكثر من مرة في نفس "
+"القائمة أو النافذة أو المربع الحواري، وإن كان هذا لا يمنع تشغيل البرنامج إلا "
+"أنه يقلل من سهولة استخدامه."
 
 msgid "We usually follow these simple rules."
-msgstr ""
+msgstr "عادة ما نتبع هذه القواعد البسيطة:"
 
 msgid "Try to keep the same letter as the original. “&File” → “I&fayile”"
-msgstr ""
+msgstr "حاول استخدام الحرف الأبرز في الكلمة: ‪“&Open”‬ ← “ا&فتح”."
 
 msgid "Try to keep the same position as the original. “&File” → ”&Ifayile”"
-msgstr ""
+msgstr "حاول أن يكون في نفس الموضع مثل الأصل: ‪“&File”‬ ← ”&ملف”."
 
 msgid "Select an uncommon letter. This might avoid clashing accelerators."
-msgstr ""
+msgstr "اختر حرفا غير شائع، لتقليل احتمال التعارض مع المسرعات الأخرى."
 
 msgid ""
 "Try to use a letter that is close on the keyboard to the original letter, "
 "therefore being easier for the user to adapt to."
 msgstr ""
+"حاول اختيار حرف قريب على لوحة المفاتيح من الحرف الأصلي، ليسهل اعتياد "
+"المستخدمين عليه."
 
 msgid ""
 "Avoid narrow letters like <f0>i</f0> and <f1>l</f1>. It might be too hard to "
 "see the underlining under them."
-msgstr ""
+msgstr "تفادى الحروف الضيقة مثل <f0>ا</f0> فقد يصعب رؤية السطر تحتها."
 
 msgid ""
 "Avoid adding accelerators under characters with descenders such as lower "
@@ -3617,10 +3676,14 @@ msgid ""
 "an actual test, since some rendering systems actually support underlining "
 "clearly when the letter contains a descender."
 msgstr ""
+"تفادى الحروف التي تنزل عن السطر مثل <f0>ح</f0> (مفردة أو في آخر الكلمة) أو "
+"<f1>ق</f1> أو <f2>و</f2>، إذ قد يتداخل السطر التحتي مع الحرف ويجعل شكله "
+"غريبا يصعب تمييزه. مثلا في كدي &ح قد تظهر مثل <f5><f6>ح</f6></f5>. من الأفضل "
+"التأكد من هذا باختبار البرنامج، فبعض البرمجيات تتعامل جيدا مع هذه الحالة."
 
 msgid ""
 "Try to avoid the letter next to a descender for similar reasons as above."
-msgstr ""
+msgstr "تفادى الحروف التي تلي الحروف النازلة عن السطر لنفس السبب السابق."
 
 msgid ""
 "Make sure the character is actually available on the user's keyboard. "
@@ -3628,6 +3691,8 @@ msgid ""
 "keyboard in the language. It might even be difficult for some users to type "
 "unaccented characters like <f1>ɔ</f1> and <f2>ɛ</f2>."
 msgstr ""
+"تفادى الحروف المنقوطة من أسفل مثل <f0>ب</f0> أو <f1>ي</f1>، لنفس السبب "
+"السابق."
 
 msgid ""
 "If your language uses diacritics under certain letters such as <f0>ț</f0>, "
@@ -3635,6 +3700,8 @@ msgid ""
 "might run through the diacritic. Avoid letters with diacritics entirely "
 "unless you are very sure that they will be usable by the end-users."
 msgstr ""
+"تفادى الحروف التي لا توجد على لوحات مفاتيح أغلب المستخدمين، مثل <f0>ڤ</f0> "
+"أو <f1>پ</f1> أو <f2>گ</f2>."
 
 msgid ""
 "If your language uses advanced input methods to type (like some Asian "
@@ -3643,6 +3710,10 @@ msgid ""
 "ignore defining the accelerator in which case it will default to the English "
 "version."
 msgstr ""
+"إن كانت لغتك تستخدم طرق إدخال متقدمة (مثل بعض اللغات الآسيوية) فلا يمكنك "
+"استخدام أي من حروف الترجمة، وفي هذه الحالة يمكنك استخدام الحرف الأصلي: "
+"‪“&File”‬ ←‏ ‪“XXXX(&F)”‬. في بعض البرمجيات يمكنك ترك المسرع دون تعريف "
+"وسيستخدم الأصلي في هذه الحالة."
 
 msgid ""
 "Non-letters like numbers and punctuation marks can be used if they are "
@@ -3650,96 +3721,103 @@ msgid ""
 "language. This will usually only be a relevant choice if it was chosen for "
 "the source text as well."
 msgstr ""
+"يمكن استخدام مسرعات غير الحروف مثل الأرقام وعلامات الترقيم ما دامت موجودة في "
+"لوحة المفاتيح الشائعة بين مستخدمي لغتك، وخاصة إذا كان هذا هو المستخدَم في "
+"الأصل."
 
 msgid "Accelerator Clashes"
-msgstr ""
+msgstr "التعارض بين المسرعات"
 
 msgid ""
 "If we have two accelerator keys using the same letter, we say that we have a "
 "clash. Assume that the following list are the top three entries in a menu:"
 msgstr ""
+"عند وجود مسرعين مختلفين يستخدمان نفس الحرف يعد هذا تعارضا، افترض أن العناصر "
+"التالية هي أول ثلاث مدخلات في قائمة:"
 
 msgid "<f0><f1>A</f1></f0>uthor"
-msgstr ""
+msgstr "<f0><f1>م</f1></f0>لف"
 
 msgid "<f0><f1>A</f1></f0>ddress"
-msgstr ""
+msgstr "<f0><f1>م</f1></f0>ستندات"
 
 msgid "Available <f0><f1>A</f1></f0>ctions…"
-msgstr ""
+msgstr "وثائق ال<f0><f1>م</f1></f0>ساعدة…"
 
 msgid ""
 "You will notice that all the accelerators use the <f0>A</f0> key – this is a "
 "clash. Fortunately most applications will cycle through the options as you "
 "press A repeatedly."
 msgstr ""
+"كما ترى أن المسرعات الثلاثة تستخدم الحرف <f0>م</f0>، وهذا يسمى تعارضا. من "
+"حسن الحظ أغلب التطبيقات ستختار العناصر بالتتالي إذا كررت ضغط <f0>م</f0>."
 
 msgid "Here is a better choice of accelerators for the same menu:"
-msgstr ""
+msgstr "وهذا اختيار أفضل للمسرعات في هذه القائمة:"
 
 msgid "A<f0><f1>d</f1></f0>dress"
-msgstr ""
+msgstr "مس<f0><f1>ت</f1></f0>ندات"
 
 msgid "A<f0>v</f0>ailable A<f1><f2>c</f2></f1>tions…"
-msgstr ""
+msgstr "و<f0>ث</f0>ائق المساعدة…"
 
 msgid ""
 "We now use <f0>A</f0>, <f1>d</f1> and <f2>v</f2> – there are no conflicts."
-msgstr ""
+msgstr "هكذا نستخدم <f0>م</f0> و <f1>ت</f1> و <f2>ث</f2> فلا يحدث تعارض."
 
 msgid "English text"
-msgstr ""
+msgstr "النص الإنجليزي"
 
 msgid "Good translation"
-msgstr ""
+msgstr "ترجمة صحيحة"
 
 msgid "Bad translation"
-msgstr ""
+msgstr "ترجمة سيئة"
 
 msgid "Appearance in original"
-msgstr ""
+msgstr "شكل الأصل"
 
 msgid "Appearance in translation"
-msgstr ""
+msgstr "شكل الترجمة"
 
 msgid "Notes"
-msgstr ""
+msgstr "ملاحظات"
 
 msgid "&File"
-msgstr ""
+msgstr "&File"
 
 msgid "&Faele"
-msgstr ""
+msgstr "&ملف"
 
 msgid "F&aele"
-msgstr ""
+msgstr "م&لف"
 
 msgid "<f0>F</f0><f1>ile</f1>"
-msgstr ""
+msgstr "<f0>F</f0>ile"
 
 msgid "<f0>F</f0><f1>aele</f1>"
-msgstr ""
+msgstr "<f0>م</f0>لف"
 
 msgid "Rule 1, 2"
-msgstr ""
+msgstr "قاعدة 1 و 2"
 
 msgid "&View"
-msgstr ""
+msgstr "&Jump"
 
 msgid "Le&belela"
-msgstr ""
+msgstr "ت&نقّل"
 
 msgid "&Lebelela"
-msgstr ""
+msgstr "&تنقّل"
 
 msgid "<f0>V</f0><f1>iew</f1>"
-msgstr ""
+msgstr "<f0>J</f0><ump"
 
 msgid "<f0>Le</f0><f1>b</f1><f2>elela</f2>"
-msgstr ""
+msgstr "ت<f0>ن</f0>قل"
 
 msgid "Rule 3, 4"
-msgstr ""
+msgstr "قاعدة 3 و 4"
 
 msgid "~Tools"
 msgstr ""
@@ -3832,13 +3910,15 @@ msgid "Spaces"
 msgstr ""
 
 msgid "Review"
-msgstr ""
+msgstr "المراجعة"
 
 msgid ""
 "Review your choices in the running application. Clashes are not a big a "
 "problem, and can sort themselves out over time. Refer to the section on "
 "“<bf0>In-product review</bf0>” on page <bf1>51</bf1>."
 msgstr ""
+"اختبر اختياراتك بتشغيل البرنامج. التعارض ليس مشكلة كبيرة وغالبا سيُحل مع "
+"الوقت. راجع قسم “<bf0>المراجعة في الميدان</bf0>” صفحة <bf1>51</bf1>."
 
 msgid ""
 "A slightly more advanced use of variables occurs in some cases to allow the "
